--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: 'Release' 
 
 on:
+  push:
+  pull_request:
+    branches: [ main ]
   release:
     types: 
       - published
@@ -8,7 +11,8 @@ on:
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
-  
+  NUGET_VERSIONING_REGEX: "[0-9]+\.[0-9]+\.[0-9]+-[a-zA-Z]+"
+
   # Project name to pack and publish
   PROJECT_NAME: GeoJSON.Text
 
@@ -37,9 +41,17 @@ jobs:
         run: dotnet build src/${{ env.PROJECT_NAME }}.sln -c Release --no-restore
       - name: Create Release NuGet package
         run: |
-          arrTag=(${GITHUB_REF//\// })
-          VERSION="${arrTag[2]}"
-          VERSION="${VERSION//v}"
-          dotnet pack -v normal -c Release --include-symbols --include-source -p:PackageVersion=$VERSION -o nupkg src/$PROJECT_NAME/$PROJECT_NAME.csproj
+        $VERSION = ""
+        if($GITHUB_REF_NAME[0] -eq "v"){
+          $VERSION=$GITHUB_REF_NAME.substring(1)
+        } else {
+          $VERSION=$GITHUB_REF_NAME
+        }
+
+        if($VERSION -match $NUGET_VERSIONING_REGEX) {
+          throw "Release tag did not contain a valid NUGET version. TAG : $GITHUB_REF_NAME"
+        }
+        
+        echo "Version: $VERSION"
       - name: Push to Nuget
         run: dotnet nuget push nuget/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{secrets.NUGET_KEY}} --skip-duplicate
