--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
-  NUGET_VERSIONING_REGEX: "[0-9]+\.[0-9]+\.[0-9]+-[a-zA-Z]+"
+  NUGET_VERSIONING_REGEX: "[0-9]+\\.[0-9]+\\.[0-9]+-[a-zA-Z]+"
 
   # Project name to pack and publish
   PROJECT_NAME: GeoJSON.Text
