--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,10 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: |
+            3.1.x
+            5.0.x
+            6.0.x
       - name: Install dependencies
         run: dotnet restore src/${{ env.PROJECT_NAME }}.sln
       - name: Build solution
