--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,17 @@ jobs:
     runs-on: windows-2019
 
     steps:
-      - name: Release version to build
+        - name: Validate release version
         run: |
           $VERSION=${env:GITHUB_REF_NAME}
           if($VERSION[0] -eq "v"){
             $VERSION=$VERSION.substring(1)
           }
-          echo "Attempting to build release - ${{ env.PROJECT_NAME }}.$VERSION"
+          if(!($VERSION -match ${env:NUGET_VERSIONING_REGEX})) {
+            throw "Release tag did not contain a valid NUGET version. TAG was : ${env:GITHUB_REF_NAME}"
+          }
+          echo "Version to use is - $VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Release version to build
+        run: |
+          echo "Release version is ${{ env.VERSION }}"
